// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-log-viewer-saved-search-by-name should delete a saved search by name 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`delete-log-viewer-saved-search-by-name should handle empty name parameter 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "Not Found",
    "status": 404,
  },
}
`;

exports[`delete-log-viewer-saved-search-by-name should handle non-existent saved search 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "operationStatus": "NotFoundLogSearch",
    "status": 404,
    "title": "The log search could not be found",
    "type": "Error",
  },
}
`;
